--- a/index.html
+++ b/index.html
@@ -58,11 +58,6 @@
         <DT><A HREF="http://campus.dajie.com/campusIndex" target="_blank">大街网</A>
         <DT><A HREF="http://www.diaochapai.com/" target="_blank">调查派</A>
         <DT><A HREF="http://www.diaochapai.com/survey1385082/" target="_blank">谷歌眼镜问卷</A>
-        <DT><A HREF="http://webmail.pactera.com/" target="_blank">内邮</A>
-        <DT><A HREF="http://hub.pactera.com/" target="_blank">内网</A>
-        <DT><A HREF="http://www.pactera.com/" target="_blank">官网</A>
-        <DT><A HREF="http://www.peice.com.cn/test" target="_blank">测试</A>
-        <DT><A HREF="http://221.228.242.214:8111/olat7711/dmz/" target="_blank">软技能学习平台</A>
         <DT><A HREF="http://www.51job.com/default.php" target="_blank">前程无忧</A>
         <DT><A HREF="http://campus.chinahr.com/seeker/mycampus/index.asp" target="_blank">中华英才</A>
         <DT><A HREF="http://xiaoyuan.zhaopin.com/" target="_blank">智联</A>
@@ -74,35 +69,11 @@
         <DT><A HREF="http://www.kanzhun.com/gs.html?ka=head-com" target="_blank">看准网</A>
         <DT><A HREF="www.scqcp.com" target="_blank">四川汽车票务网</A>
         <DT><A HREF="http://www.jobui.com/" target="_blank">职友集</A>
-        <DT><A HREF="http://www.clpx.org.cn/index.asp" target="_blank">广州市残疾人职业培训中心</A>
-        <DT><A HREF="http://www.xuechunyu.com/" target="_blank">学唇语网</A>
-        <DT><A HREF="http://www.cdpsn.org.cn/index.htm" target="_blank">中国残疾人服务网</A>
-        <DT><A HREF="http://www.cdpf.org.cn/" target="_blank">中国残疾人联合会</A>
-        <DT><A HREF="http://www.scdpf.org.cn/" target="_blank">四川省残疾人联合会</A>
-        <DT><A HREF="http://www.leshan.gov.cn/site/sitecanlian/Index.aspx" target="_blank">乐山市残疾人联合会</A>
-        <DT><A HREF="http://www.canyoucn.com/index.asp?bianhao=7">残友集团</A>
-        <DT><A HREF="http://bbs.cndeaf.com/?nogroups" target="_blank">聋人在线</A>
                 </td>
  				<td width="25%" valign="top">
-        <DT><A HREF="http://www.jnu.edu.cn/" target="_blank">暨南大学</A>
-        <DT><A HREF="http://202.116.0.176/" target="_blank">教务处</A>
-        <DT><A HREF="http://202.116.13.244/patroninfo~S1*chx/1067458/items" target="_blank">图书馆</A>
-        <DT><A HREF="http://xsc.jnu.edu.cn/default.aspx" target="_blank">学生处</A>
-        <DT><A HREF="http://www.jnu.edu.cn/jnu2014/article_list.asp?channelID=5037" target="_blank">校内通知</A>
-        <DT><A HREF="http://study.jnu.edu.cn/webapps/portal/frameset.jsp?tab_id=_1_1" target="_blank">教学资源</A>
-        <DT><A HREF="http://portal.jnu.edu.cn/" target="_blank">暨大个人中心</A>
-        <DT><A HREF="http://cet.jnu.edu.cn/cet/default_0.htm" target="_blank">四六级网上报名</A>
-        <DT><A HREF="http://fee.jnu.edu.cn/student.aspx" target="_blank">缴费系统</A>
-        <DT><A HREF="http://202.116.1.182:9000/Frames/pindex" target="_blank">教学信息门户</A>
-        <DT><A HREF="http://xxxs.jnu.edu.cn/" target="_blank">信科院学生园地</A>
+        <DT><A HREF="http://www.nwsuaf.edu.cn/" target="_blank">西北农林科技大学</A>
         <DT><A HREF="http://stu.chinacampus.org/" target="_blank">中国大学生网</A>
-        <DT><A HREF="http://xxxy.jnu.edu.cn/" target="_blank">信科院</A>
-        <DT><A HREF="http://math.jnu.edu.cn/" target="_blank">数学系</A>
-        <DT><A HREF="http://202.116.161.83:8080/gdg2/struts2/toHomepage.action" target="_blank">广东省学位与研究生教育网</A>
-        <DT><A HREF="http://qgzx.jnu.edu.cn/index.php/infoIntro/index" target="_blank">暨大勤助</A>
-        <DT><A HREF="http://www.gradjob.com.cn/cms/index.html" target="_blank">广东大学生就业在线</A>
         <DT><A HREF="http://my.chsi.com.cn/archive/zxssurvey.action" target="_blank">学信档案</A>
-        <DT><A HREF="http://career.jnu.edu.cn/" target="_blank">暨大就业指导服务平台</A>
                 </td>
    				<td width="25%" valign="top">
         <DT><A HREF="http://weibo.com/" target="_blank">新浪</A>
@@ -111,12 +82,10 @@
         <DT><A HREF="https://www.facebook.com/" target="_blank">Facebook</A>
         <DT><A HREF="http://www.dytt8.net/" target="_blank">电影天堂</A>
         <DT><A HREF="http://www.xuandy.com/" target="_blank">炫电影</A>
-        <DT><A HREF="http://www.7y7.com/pic/meinv/index_2.html" target="_blank">清纯小美女</A>
         <DT><A HREF="http://www.yiyi.cc/" target="_blank">一一影视</A>
         <DT><A HREF="http://www.qire123.com/" target="_blank">面包网</A>
         <DT><A HREF="http://www.2tu.cc/" target="_blank">迅播影院</A>
         <DT><A HREF="http://www.skywhat.com/online/" target="_blank">skywhat</A>
-        <DT><A HREF="http://fanqianghou.com/" target="_blank">咳咳咳</A>
         <DT><A HREF="http://www.360buy.com/" target="_blank">京东</A>
         <DT><A HREF="http://www.taobao.com/" target="_blank">淘宝</A>
         <DT><A HREF="http://www.amazon.cn/" target="_blank">亚马逊</A>
