--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <td width="25%" height="25">娱乐</td>                
 			</tr>
 			<tr><td width="25%" valign="top">
-        <DT><A HREF="https://github.com/k-judy/k-judy.github.io/new/master" target="_blank">主页维护</A>
+        <DT><A HREF="https://github.com/k-judy/k-judy.github.io/edit/master/index.html" target="_blank">主页维护</A>
                 </td>
  				<td width="25%" valign="top">
         <DT><A HREF="http://campus.dajie.com/campusIndex" target="_blank">大街网</A>
