--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
     <head>
       <meta http-equiv="content-type" content="text/html;charset=utf-8" />
       <title> k-judy</title>
-    </head> 
-    <body>
-    
-    	<script type="text/javascript">
+      <script type="text/javascript">
     		function load()
     		{
     			window.location="kingofhevil.github.io";
     		}
     	</script>
-    	
+    </head>	
+    <body onload = "load()">
     </body>
   </html>
