--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <script type="text/javascript">
     		function load()
     		{
-    			window.location="kingofhevil.github.io";
+    			window.location="http://kingofhevil.github.io/pages/bookmarks.html";
     		}
     	</script>
     </head>	
