--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@
     <head>
       <meta http-equiv="content-type" content="text/html;charset=utf-8" />
       <title> k-judy</title>
-      <script type="text/javascript">
-    		function load()
-    		{
-    			window.location="http://kingofhevil.github.io/pages/bookmarks.html";
-    		}
-    	</script>
     </head>	
-    <body onload = "load()">
+    <body>
+    <script language="javascript">
+    		window.location.href="http://kingofhevil.github.io/pages/bookmarks.html";
+    </script>
     </body>
   </html>
