--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <html>
     <head>
       <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+      <meta http-equiv = "refresh" content="0.1;url=http://kingofhevil.github.io/pages/bookmarks.html"/>
       <title> k-judy</title>
     </head>	
     <body>
