--- a/index.html
+++ b/index.html
@@ -1,10 +1,39 @@
-<!DOCTYPE html>
-  <html>
-    <head>
-      <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-      <meta http-equiv = "refresh" content="0.1;url=http://kingofhevil.github.io/pages/bookmarks.html"/>
-      <title> k-judy</title>
-    </head>	
-    <body>
-    </body>
-  </html>
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>To Judy</title>
+
+<style type="text/css">
+#layout {
+	background-color: #FF0;
+	height: auto;
+	width: 960px;
+	margin: auto;
+}
+p{
+	font-size:16px;
+	text-indent:2em;
+	padding:10px;
+	margin:10px;
+	line-height:30px; 
+}
+</style>
+</head>
+
+<body bgcolor="#000000">
+<div id="layout">
+
+
+<p>DD, 毕业快乐！</p>
+<p>其实这个是当成生日礼物送你的。但是粗糙如我，生日礼物整整迟了半年，你就忍了吧。</p>
+<p>东西是托我在巴黎工作的师姐帮忙买的，礼轻情意重嘛，不要嫌弃哈！</p>
+<p>你说记不住那个网址，所以我就把它给刻上去了。刻字的时候，师姐肯定被我累倒了，哈哈。</p>
+<p>作为程序猿最幸福的事，除了有一个一起撸代码的好基友，还有一个可以无话不谈的好闺蜜！</p>
+<p>加油,要做个精致的好姑娘！</p>
+
+
+
+</div>
+</body>
+</html>
