--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="anscii">
+	<!--
+<meta charset="utf-8">
+		-->
 <title>To Judy</title>
 
 <style type="text/css">
