--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<!--
-<meta charset="utf-8">
-		-->
+<meta charset="ISO-8859-1">
 <title>To Judy</title>
 
 <style type="text/css">
