--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<html>
+<>
 <head>
-<meta charset="ISO-8859-1">
+<meta charset="utf-8">
 <title>To Judy</title>
 
 <style type="text/css">
