--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<doctype html>
+<!--
+<!doctype html>
 <html>
 <head>
 <meta charset="utf-8">
 <title>To Judy</title>
-
+-->
 <style type="text/css">
 #layout {
 	background-color: #FF0;
