--- a/index.html
+++ b/index.html
@@ -22,17 +22,7 @@ p{
 
 <body bgcolor="#000000">
 <div id="layout">
-
-
-<p>DD, 毕业快乐！</p>
-<p>说了要送你生日礼物，我怎么会食言呢！也就迟半年而已嘛，嘿嘿，小case！</p>
-<p>东西是托我在巴黎工作的师姐帮忙买的，礼轻情意重嘛，不要嫌弃哈！</p>
-<p>你说记不住那个网址，所以我就把它给刻上去了。刻字的时候，师姐肯定被我雷倒了，哈哈。</p>
-<p>作为程序猿最幸福的事，除了有一个一起撸代码的好基友，还有一个可以无话不谈的好闺蜜！</p>
-<p>加油,要做个精致的好姑娘！</p>
-<p></p>
-
-
+<h1>抽时间帮你做书签</h1>
 
 </div>
 </body>
