--- a/index.html
+++ b/index.html
@@ -1,45 +1,10 @@
 <!DOCTYPE html>
-<html>
-<head lang="zh-CN">
-  <meta charset="utf-8">
-  <title>position</title>
-  <style>
-    body.body001 {
-	  margin: 0;
-	  background-color: yellow;
-	}	  
-	div.div001 {
-	  background-color: blue;
-	  width: 100%;
-	  height: 100%;
-	}	  
-    img.img001 {
-	  position: fixed;
-      width:100%;
-      height:100%;	  
-      top:0;
-      left:0;
-      z-index:-1;	  
-	}
-	img.img002 {
-	  position:relative;	  
-	  top:200px;
-	  left:700px;
-	}
-	h1.h1001 {
-	position:absolute;
-	top:400px;
-	left:400px;
-	}
-	
-  </style>
-</head>
-
-  <body class="">
-    <div class="">
-      <img class="img001" src="pictures/001.jpg">
-	  <img class="img002" src="pictures/eg_cute.gif">	  
-  
-    </div>  
+<html lang="zh-CN">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv = "refresh" content="0.1;url=http://kingofhevil.github.io/pages/bookmarks.html#judy"/>
+    <title>judy</title>
+  </head>
+  <body>
   </body>
 <html>
